--- a/src/app/components/category-filter/category-filter.component.html
+++ b/src/app/components/category-filter/category-filter.component.html
@@ -1,24 +1,9 @@
 <section class="flex justify-between p-10">
-    <ul class="flex bg-white rounded-full space-x-4 px-4 h-12 items-center">
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
-        <li><button class="icon"><img src="assets/categories/fish.svg" alt=""></button></li>
+    <ul class="flex bg-white rounded-full space-x-4 p-6 h-12 items-center">
+        <li *ngFor="let category of categories">
+            <button class="icon" (click)="selectCategory(category.value)">
+                <img [src]="category.icon" [alt]="category.value" height="40px" width="40px">
+            </button>
+        </li>
     </ul>
-    <div>
-
-        <a href="https://www.bycentrum.dk/" target="_blank">
-            <button class="hidden sm:flex bg-white p-2 px-4 items-center space-x-2 rounded-full justify-end h-12">
-                <h1 class="font-semibold">Til forsiden</h1>
-                <img src="assets/icons/arrow-left.svg" alt="">
-            </button>
-        </a>
-        <a href="https://www.bycentrum.dk/" target="_blank">
-            <button class="sm:hidden bg-white p-2 px-4 items-center space-x-2 rounded-full justify-end h-12">
-                <img src="assets/icons/arrow-left.svg" alt="">
-            </button>
-        </a>
-    </div>
 </section>
