--- a/src/app/components/booth-availability/booth-availability.component.html
+++ b/src/app/components/booth-availability/booth-availability.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col sm:flex-row sm:space-x-2 space-y-2 sm:space-y-0">
     <div class="flex">
-        <button class="bg-white rounded-full">
+        <button (click)="showPopup('ledig')" class="bg-white rounded-full">
             <div class="py-2 px-4 flex items-center space-x-2">
                 <img src="assets/availability/green.svg" alt="grøn">
                 <h1 class="font-semibold">Ledig</h1>
@@ -9,7 +9,7 @@
     </div>
 
     <div class="flex">
-        <button class="bg-white rounded-full">
+        <button (click)="showPopup('optaget')" class="bg-white rounded-full">
             <div class="py-2 px-4 flex items-center space-x-2">
                 <img src="assets/availability/red.svg" alt="rød">
                 <h1 class="font-semibold">Optaget</h1>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="flex">
-        <button class="bg-white rounded-full">
+        <button (click)="showPopup('utilgaengelig')" class="bg-white rounded-full">
             <div class="py-2 px-4 flex items-center space-x-2">
                 <img src="assets/availability/gray.svg" alt="grå">
                 <h1 class="font-semibold">Utilgængelig</h1>
@@ -26,3 +26,7 @@
         </button>
     </div>
 </section>
+
+<app-availability-popup [title]="popupData.title" [description]="popupData.description" [example]="popupData.example"
+    [visible]="popupVisible" (close)="closePopup()">
+</app-availability-popup>
